--- a/index.html
+++ b/index.html
@@ -72,25 +72,16 @@
             </ul>
         </div>
         <div id="introduce">
-            <p>吾自幼聪慧，群中翘楚，及至白云山麓之渣校，亦作牛人。</p>
-            <p>二十二年，负笈重洋，寒暑不辍，绩优而卒，旋即辗转万里，横贯东西求职：食干面包，饮自来水，流浪都市，寄身同学篱下。每逢面试消息传来，便收拾行囊，奔波漂泊，终得一职，隐身大山深处边陲小城。</p>
-            <p>未几，职场遭变，风雪辞去，几度露宿郊外，雨夜车中独寐。越二年，赴美工作。彼邦山川壮丽，物产丰饶，物价平易，民风朴实，予余以深刻之印象，非亲历者不能想象也。</p>
-            <p>二十八年，派赴京师，驻华自始，每日勤勉，孜孜不辍，凡人所不愿为者，吾必躬行；达人所难至者，吾亦力求。北国春来，百花盛放，彩旗高展，万物蓬勃。京畿之东，王气所钟，登高楼而远眺，气象万千。每入地铁，观芸芸众生，熙攘奔波，无不为生计拼搏，奋斗向上，蔚然可敬。
+            <p>余自幼颖悟，群伦之中，卓然特出。及长，入白云山麓之陋校，亦为俊杰。</p>
+            <p>年二十有二，负笈远涉重洋，寒暑不懈，学业优成，卒业遂毕。后辗转万里，横贯东西，求职于世。食干面包，饮自来水，流寓都市，寄身同窗篱下。每闻试事之讯，则收拾行囊，奔波四方，终获一职，隐于大山深处，边陲小邑。</p>
+            <p>未几，职场生变，风雪辞去，屡露宿于野，雨夜独寐车中。越二年，赴美从事。彼地山川壮丽，物阜民丰，价廉俗厚，予余深印，非亲历莫能喻也。</p>
+            <p>二十八年，派赴京师，自驻华始，每日勤勉，孜孜不辍，凡人所不欲为者，余必躬践；贤者所难至者，余亦力求。北国春至，百花争妍，彩旗高扬，万物勃兴。京畿东地，王气钟焉，登高楼远瞩，景象万千。每入地铁，观众生熙攘，奔走谋生，皆奋斗向上，令人敬佩。
             </p>
-            <p>次年，因美中交恶，业绩不彰，复见诸友人生沉浮，是非遭遇，愈觉吾人之幸运非常。然感帝都非久居之地，遂签离职书，与挚友别，复离华土。返美半年，流离失所，飘零如浮萍；次年入我司，始得安稳。自此诸事顺遂，誉享四方，凡培训、考试，未尝一败，成绩翘楚，令人欣慰。久漂江湖，终得一隅安居乐业，幸哉！
+            <p>翌年，美中交病，业绩不彰，又见友朋浮沉，得失交错，愈感余之幸甚。然帝都非久居之地，遂署离职之书，与挚友诀，复离华土。返美半载，流离无依，飘零若萍；次年入我司，始得安稳。自后诸事顺遂，声誉四播，凡训试之事，未尝败绩，成绩翘然，慰人心怀。久漂江湖，终觅一隅，安居乐业，幸甚！
             </p>
-            <p>吾别乡十五载，昔年理想抱负，成者寥寥，与初心相去甚远。负他人之事常有，遗憾尤深。然万千理由，终难弥补。惟珍惜光阴，自当下始，埋首苦干，矢志不移，终有所成。</p>
-            <p>吾信幸福可求，故集毕生之力，百折不挠，奋勇以赴。</p>
-        </div>
-        <br>
-        <div id="next-gen">
-            <p>余自幼穎悟，群倫之中，卓然特出。及長，入白雲山麓之陋校，亦為俊傑。</p>
-            <p>年二十有二，負笈遠涉重洋，寒暑不懈，學業優成，卒業遂畢。後輾轉萬里，橫貫東西，求職於世。食乾糧，飲泉水，流寓都市，寄身同窗籬下。每聞試事之訊，則收拾行囊，奔波四方，終獲一職，隱於大山深處，邊陲小邑。</p>
-            <p>未幾，職場生變，風雪辭去，屢露宿於野，雨夜獨寐車中。越二年，赴美從事。彼地山川壯麗，物阜民豐，價廉俗厚，予余深印，非親歷莫能喻也。</p>
-            <p>年二十有八，受命赴京師，自此駐華，日日勤勉，孜孜不倦。凡人所不欲為，余必躬踐；賢者所難至，余亦力爭。北國春至，百花爭妍，彩旗高揚，萬物勃興。京畿東地，王氣鍾焉，登高樓遠矚，景象萬千。每入地鐵，觀眾生熙攘，奔走謀生，皆奮鬥向上，令人敬佩。</p>
-            <p>翌年，美中交病，業績不振，又見友朋浮沉，得失交錯，愈感余之幸甚。然帝都非久居之地，遂署離職之書，與摯友訣，復離華境。返美半載，流離無依，飄零若萍；次年入今司，始得安穩。自後諸事順遂，聲譽四播，凡訓試之事，未嘗敗績，成績翹然，慰人心懷。久漂江湖，終覓一隅，安居樂業，幸甚！</p>
-            <p>余別鄉十有五載，昔志高遠，成者寥寥，與初心遠矣。負人之事屢存，憾尤深。雖萬端理由，難補缺憾。惟當惜時，自今始，埋首力耕，矢志不渝，終有所就。</p>
-            <p>余堅信幸福可求，故傾畢生之力，百折不回，奮勇前行。</p>
+            <p>三十有馀，邂逅丽人。彼不矜容色，不计家资，惟以丹诚相待；余欣遇知音，遂结琴瑟，共偕白首，同心同德，并享遐龄。</p>
+            <p>吾别乡十八载，昔志高远，成者寥寥，与初心远矣。负人之事屡存，憾尤深。虽万端理由，难补缺憾。惟当惜时，自今始，埋首力耕，矢志不渝，终有所就。</p>
+            <p>吾坚信幸福可求，故倾毕生之力，百折不回，奋勇前行。 </p>
         </div>
     </div>
 </body>
